--- a/dab-overarching-project/client/src/layouts/Layout.astro
+++ b/dab-overarching-project/client/src/layouts/Layout.astro
@@ -1,22 +1,23 @@
-<!doctype html>
+---
+---
+
 <html lang="en">
 	<head>
-		<meta charset="UTF-8" />
+		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>Programming Exercises</title>
 	</head>
 	<body>
-		<slot />
+		<main>
+			<slot />
+		</main>
 	</body>
 </html>
 
 <style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
+	main {
+		max-width: 800px;
+		margin: 0 auto;
+		padding: 2rem;
 	}
 </style>
