--- a/dab-overarching-project/client/src/pages/index.astro
+++ b/dab-overarching-project/client/src/pages/index.astro
@@ -1,5 +1,4 @@
 ---
-import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
@@ -7,5 +6,17 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout>
-	<Welcome />
+	<p>Programming time!</p>
+	<a href="/exercises/1">Start</a>
 </Layout>
+
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>Programming Time</title>
+  </head>
+  <body>
+    <p>Programming time!</p>
+    <a href="/exercises/1">Start</a>
+  </body>
+</html>
