--- a/dab-overarching-project/client/src/pages/exercises/[id].astro
+++ b/dab-overarching-project/client/src/pages/exercises/[id].astro
@@ -2,6 +2,8 @@
 import Layout from '../../layouts/Layout.astro';
 import ExerciseForm from '../../components/ExerciseForm.svelte';
 
+export const prerender = false;
+
 const { id } = Astro.params;
 ---
 
